# whisper-subs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
src/: audio.rs  main.rs  srt.rs  transcribe.rs
